# YADRO_kvadraOS_task_team_4

./: .gitignore  CMakeLists.txt  README.md
src/: cli.cpp  cli.h  files.h  formats.h  main.cpp  scanner.cpp  scanner.h  serializer.cpp  serializer.h  server.cpp  server.h
