cmake_minimum_required(VERSION 3.10)
project(media_scanner LANGUAGES CXX)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(${PROJECT_NAME} 
    src/main.cpp 
    src/scanner.cpp
    src/serializer.cpp
    src/cli.cpp
    src/server.cpp
)

